magic-cloud-auths/magic-cloud-auths-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magic-cloud-auths
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magic-cloud-auths
  template:
    metadata:
      labels:
        app: magic-cloud-auths
    spec:
      containers:
        - name: magic-cloud-auths
          image: paulinedav/magic-cloud-auths:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: magic-cloud-auths
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8080
  selector:
    app: magic-cloud-auths
  type: ClusterIP
