magic-cloud-auths/ingress-auths.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress-auths
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx 
  rules:
    - host: magic-cloud-auths.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: magic-cloud-auths
                port:
                  number: 8081
